--- a/main.html
+++ b/main.html
@@ -9,9 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 
-	<h1>Why I want to become a developer ?</h1>
-<p>I wanna become a developer beacause this is my dream.</p>
-
+	<h1>Why I want to become a developer?</h1>
+	<p>I wanna become a developer because this is my dream.</p>
 
 </body>
 
